--- a/jie-jue-git-hooks-wu-fa-yun-xing-de-wen-ti.html
+++ b/jie-jue-git-hooks-wu-fa-yun-xing-de-wen-ti.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="解决 Git Hooks 无法运行的问题"/>
 <meta property="og:description" content="这两天在研究 Git Hooks 的过程中，遇到一个问题。 在触发钩子时，终端一直输出： remote: error: cannot run hooks/post-receive: No such file or directory 其实这不是文件不存在的问题，反而是文件存在，但是有问题才会出现这个提示。 经过网上查找，主要有两个原因 一、 脚本解释器异常 比如不小心把 /bin/bash 写成了 /bin/bsah, 这个情况修改成正确可用的解释器即可。 二、 错误的换行符 在 windows 系统里，采用 CRLF 作换行符，而在 linux 下采用 LF 作换行符。 因为我的脚本是在 windows 系统下编写完成后，直接放到 …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/jie-jue-git-hooks-wu-fa-yun-xing-de-wen-ti.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/jie-jue-git-hooks-wu-fa-yun-xing-de-wen-ti.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-07-15 14:46:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Tips"/>
 <meta property="article:tag" content="git"/>
 <meta property="og:image" content="/images/profile.png">
@@ -43,10 +43,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -68,7 +68,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -84,7 +84,7 @@
       
     <h1 id="jie-jue-git-hooks-wu-fa-yun-xing-de-wen-ti">解决 Git Hooks 无法运行的问题</h1>
     <p>
-          Posted on 周六 15 七月 2017 in <a href="http://qianpeili.github.io/category/tips.html">Tips</a>
+          Posted on 周六 15 七月 2017 in <a href="https://qianpeili.github.io/category/tips.html">Tips</a>
 
 
     </p>
@@ -117,7 +117,7 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://qianpeili.github.io/tag/git.html">git</a>
+      <a href="https://qianpeili.github.io/tag/git.html">git</a>
     </p>
   </div>
 
@@ -153,7 +153,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
