--- a/bashshu-chu-zhong-ding-xiang.html
+++ b/bashshu-chu-zhong-ding-xiang.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="Bash输出重定向"/>
 <meta property="og:description" content="对 bash 命令一直不太熟，每次使用 nohup 命令都要从网上现找。 有时会看到一些命令后面跟着 &#34;2&gt;&amp;1&#34; 的参数。比如 nohupy python test.py &gt; test.log 2&gt;&amp;1 之前也没有多管，直接用了。前几天又在其他人的 shell 脚本中看到 &#34;2&gt;&amp;1&#34;, 才想起去了解一下 ，现把内容整理一下做记录。 主要内容借鉴于Bash One-Liners Explained, Part III: All about redirections - good coders code, great coders reuse，原文非常详细，欢迎访问原文。 当 bash 启动时，会开启三个标准文件描述符：stdin …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/bashshu-chu-zhong-ding-xiang.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/bashshu-chu-zhong-ding-xiang.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-07-09 15:20:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Note"/>
 <meta property="article:tag" content="bash"/>
 <meta property="article:tag" content="linux"/>
@@ -44,10 +44,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -69,7 +69,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -85,7 +85,7 @@
       
     <h1 id="bashshu-chu-zhong-ding-xiang">Bash输出重定向</h1>
     <p>
-          Posted on 周日 09 七月 2017 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
+          Posted on 周日 09 七月 2017 in <a href="https://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
@@ -134,8 +134,8 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://qianpeili.github.io/tag/bash.html">bash</a>
-      <a href="http://qianpeili.github.io/tag/linux.html">linux</a>
+      <a href="https://qianpeili.github.io/tag/bash.html">bash</a>
+      <a href="https://qianpeili.github.io/tag/linux.html">linux</a>
     </p>
   </div>
 
@@ -171,7 +171,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
