--- a/fan-yi-goyu-yan-zhong-de-fan-she-ji-zhi.html
+++ b/fan-yi-goyu-yan-zhong-de-fan-she-ji-zhi.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="【翻译】Go语言中的反射机制"/>
 <meta property="og:description" content="原文链接： The Laws of Reflection - The Go Blog 作者： Rob Pike 翻译： 钱佩丽 介绍 反射( reflection )在计算机中指的是一个程序审查自身结构的能力，尤其是类型( Types )。 反射是元编程的一种形式，也是让人觉得头疼的一个点。 在这篇文章中，我们将对反射在 Go 中的工作原理做一些解释说明。 各种计算机语言的反射机制不尽相同（有的甚至没有反射）， 但这篇文章，我们只关心 Go 语言中的反射， 文中所有反射，都是在 Go 语言的背景下。 类型和接口 由于反射建立在类型机制上，所以我们先来介绍一下 Go 的类型。 Go 是静态类型语言，每个变量都有一个静态的类型，就是说，在编译的时候，变量的类型必须是固定且唯一的。 比如： int, float32, *MyType …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/fan-yi-goyu-yan-zhong-de-fan-she-ji-zhi.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/fan-yi-goyu-yan-zhong-de-fan-she-ji-zhi.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-07-28 20:48:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Translation"/>
 <meta property="article:tag" content="go"/>
 <meta property="og:image" content="/images/profile.png">
@@ -43,10 +43,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -68,7 +68,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -84,7 +84,7 @@
       
     <h1 id="fan-yi-goyu-yan-zhong-de-fan-she-ji-zhi">【翻译】Go语言中的反射机制</h1>
     <p>
-          Posted on 周五 28 七月 2017 in <a href="http://qianpeili.github.io/category/translation.html">Translation</a>
+          Posted on 周五 28 七月 2017 in <a href="https://qianpeili.github.io/category/translation.html">Translation</a>
 
 
     </p>
@@ -524,7 +524,7 @@ fmt.Println(&quot;t is now&quot;, t)
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://qianpeili.github.io/tag/go.html">go</a>
+      <a href="https://qianpeili.github.io/tag/go.html">go</a>
     </p>
   </div>
 
@@ -560,7 +560,7 @@ fmt.Println(&quot;t is now&quot;, t)
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
