--- a/fan-yi-nginx-ru-he-chu-li-yi-ge-qing-qiu.html
+++ b/fan-yi-nginx-ru-he-chu-li-yi-ge-qing-qiu.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="【翻译】 Nginx 如何处理一个请求"/>
 <meta property="og:description" content="原文：How nginx processes a request 网上不乏好的翻译，我再做一次翻译，只是为了让自己更好地理解，也方便以后自己翻阅。 Name-based virtual servers nginx 首先需要判断哪个 Server 来处理这个请求。让我们来看一个简单的配置文件，里面定义了3个虚拟服务器，并且都监听了80端口。 server { listen 80; server_name example.org www.example.org; ... } server { listen 80; server_name example.net www.example.net; ... } server { listen 80; server_name example.com www.example.com; ... } 这份配置文件测试的情况是，nginx 根据请求头中的 …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/fan-yi-nginx-ru-he-chu-li-yi-ge-qing-qiu.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/fan-yi-nginx-ru-he-chu-li-yi-ge-qing-qiu.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-06-09 20:12:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Translation"/>
 <meta property="article:tag" content="nginx"/>
 <meta property="og:image" content="/images/profile.png">
@@ -43,10 +43,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -68,7 +68,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -84,7 +84,7 @@
       
     <h1 id="fan-yi-nginx-ru-he-chu-li-yi-ge-qing-qiu">【翻译】 Nginx 如何处理一个请求</h1>
     <p>
-          Posted on 周五 09 六月 2017 in <a href="http://qianpeili.github.io/category/translation.html">Translation</a>
+          Posted on 周五 09 六月 2017 in <a href="https://qianpeili.github.io/category/translation.html">Translation</a>
 
 
     </p>
@@ -235,7 +235,7 @@ server {
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://qianpeili.github.io/tag/nginx.html">nginx</a>
+      <a href="https://qianpeili.github.io/tag/nginx.html">nginx</a>
     </p>
   </div>
 
@@ -271,7 +271,7 @@ server {
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
