--- a/git-submodulede-shi-yong.html
+++ b/git-submodulede-shi-yong.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="Git Submodule的使用"/>
 <meta property="og:description" content="Submodule介绍 前几天因为项目需求，接触了Git的Submodule功能。 客户端和服务端的项目各自独立开发，因为要用到一个共同的子库——SubA，SubA即需要独立保持版本信息，又需要同时给客户端和服务端的项目提供支持。Submodule正好可以帮助我们管理这个问题。 Submodule语法 git submodule [--quiet] add [&lt;options&gt;] [--] &lt;repository[&lt;path&gt;] git submodule [--quiet] status [--cached] [--recursive] [--] [&lt;path&gt;…​] git submodule [--quiet] init [--] [&lt;path&gt;…​] git submodule [--quiet] deinit [-f|--force] (--all|[--] &lt;path&gt;…​) git submodule [--quiet] update [&lt;options&gt;] [--] [&lt;path&gt;…​] git submodule …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/git-submodulede-shi-yong.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/git-submodulede-shi-yong.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-06-13 19:11:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Note"/>
 <meta property="article:tag" content="git"/>
 <meta property="og:image" content="/images/profile.png">
@@ -43,10 +43,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -68,7 +68,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -84,7 +84,7 @@
       
     <h1 id="git-submodulede-shi-yong">Git Submodule的使用</h1>
     <p>
-          Posted on 周二 13 六月 2017 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
+          Posted on 周二 13 六月 2017 in <a href="https://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
@@ -207,7 +207,7 @@ Cloning into <span class="s1">&#39;F:/MainCopy/submodule/A&#39;</span>...
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://qianpeili.github.io/tag/git.html">git</a>
+      <a href="https://qianpeili.github.io/tag/git.html">git</a>
     </p>
   </div>
 
@@ -243,7 +243,7 @@ Cloning into <span class="s1">&#39;F:/MainCopy/submodule/A&#39;</span>...
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
