--- a/gode-yi-lai-guan-li-gong-ju-govendor.html
+++ b/gode-yi-lai-guan-li-gong-ju-govendor.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="Go的依赖管理工具govendor"/>
 <meta property="og:description" content="依赖管理是我接触 go 以来，觉得比较麻烦的事情。 不过在 go-1.5 版本中，出现了一个 vendor 的概念，并且 vendor 作为一个默认功能存在于1.7之后的版本中。 vendor的概念就类似于python中的 virtualenv 建立的 env，它是一个文件夹，里面存放了项目所用的依赖。如果项目中有个文件 import 了第三方的 package，而这个 package 又存在项目的 vendor 目录中，这个文件编译的时候会从 vendor 中 import 这个 package 比如： $GOPATH | src/ | | project/ | | | main.go | | | vendor/ | | | | github.com/pkg/sftp/ | | | | golang.org/x …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/gode-yi-lai-guan-li-gong-ju-govendor.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/gode-yi-lai-guan-li-gong-ju-govendor.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-05-22 18:11:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Note"/>
 <meta property="article:tag" content="go"/>
 <meta property="article:tag" content="vendor"/>
@@ -44,10 +44,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -69,7 +69,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -85,7 +85,7 @@
       
     <h1 id="gode-yi-lai-guan-li-gong-ju-govendor">Go的依赖管理工具govendor</h1>
     <p>
-          Posted on 周一 22 五月 2017 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
+          Posted on 周一 22 五月 2017 in <a href="https://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
@@ -219,8 +219,8 @@ pl  Bomber/test
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://qianpeili.github.io/tag/go.html">go</a>
-      <a href="http://qianpeili.github.io/tag/vendor.html">vendor</a>
+      <a href="https://qianpeili.github.io/tag/go.html">go</a>
+      <a href="https://qianpeili.github.io/tag/vendor.html">vendor</a>
     </p>
   </div>
 
@@ -256,7 +256,7 @@ pl  Bomber/test
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
