--- a/replace-type-code-with-statestrategy.html
+++ b/replace-type-code-with-statestrategy.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="Replace Type Code With State/Strategy"/>
 <meta property="og:description" content="今天在阅读《重构：改善既有代码的设计》第一个案例中，遇到了一个replace type code with state/strategy的概念，不是很了解， 但大概懂了意思。决定用python实现一下其代码。 觉得主要思想是： 一个对象(Movie)有一个属性(price_code)，这个属性的不同会导致对象的方法(get_charge)返回不同的结果。 最开始的想法肯定是用subclass进行分类，但是一部电影可以更换price_code，一个对象没法更换其所属类，所以直接建立一个price对象作为属性，改变price_code时，即改变了price对象。 重构前的代码： class Movie(object): REGULAR = 0 NEW_RELEASE = 1 CHILDRENS = 2 def __init__ …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/replace-type-code-with-statestrategy.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/replace-type-code-with-statestrategy.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-12-26 20:55:00+08:00"/>
 <meta property="article:modified_time" content="2016-12-28 12:40:00+08:00"/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Note"/>
 <meta property="og:image" content="/images/profile.png">
 
@@ -42,10 +42,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -67,7 +67,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -83,7 +83,7 @@
       
     <h1 id="replace-type-code-with-statestrategy">Replace Type Code With State/Strategy</h1>
     <p>
-          Posted on 周一 26 十二月 2016 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
+          Posted on 周一 26 十二月 2016 in <a href="https://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
@@ -291,7 +291,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
