--- a/tong-guo-pre-hook-pan-duan-shi-fou-tui-song-zhong-fu-de-nei-rong.html
+++ b/tong-guo-pre-hook-pan-duan-shi-fou-tui-song-zhong-fu-de-nei-rong.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="通过 pre-hook 判断是否推送重复的内容"/>
 <meta property="og:description" content="前言 昨天运维同事找我，要求实现一个 pre-receive 钩子，在里面判断推送的文件中是否有重复的文件，如果有就拒绝此次 push。问我该如何实现。 虽然觉得这个判断标准有点莫名其妙，但还是想办法实现了一下。途中遇到过很多问题，以为无法实现，不过最终还是找到了解决方法。 简单介绍 pre-receive 参考连接： Git - githooks Documentation pre-receive 是 Git 众多 Hooks 中的一种，在远程库中触发。当 server 端(比如：gitlab)收到用户的 push 内容后，在更改远程库内容前，如果 pre-receive 文件存在，就会执行这个文件。文件正常退出（exit 0）表示接受该次 push, 反之则拒绝。 server 端执行 pre-receive 时 …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/tong-guo-pre-hook-pan-duan-shi-fou-tui-song-zhong-fu-de-nei-rong.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/tong-guo-pre-hook-pan-duan-shi-fou-tui-song-zhong-fu-de-nei-rong.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-07-14 18:20:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Note"/>
 <meta property="article:tag" content="git"/>
 <meta property="article:tag" content="python"/>
@@ -44,10 +44,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -69,7 +69,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -85,7 +85,7 @@
       
     <h1 id="tong-guo-pre-hook-pan-duan-shi-fou-tui-song-zhong-fu-de-nei-rong">通过 pre-hook 判断是否推送重复的内容</h1>
     <p>
-          Posted on 周五 14 七月 2017 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
+          Posted on 周五 14 七月 2017 in <a href="https://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
@@ -209,8 +209,8 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://qianpeili.github.io/tag/git.html">git</a>
-      <a href="http://qianpeili.github.io/tag/python.html">python</a>
+      <a href="https://qianpeili.github.io/tag/git.html">git</a>
+      <a href="https://qianpeili.github.io/tag/python.html">python</a>
     </p>
   </div>
 
@@ -246,7 +246,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
