--- a/unicodexiao-ji-qiao.html
+++ b/unicodexiao-ji-qiao.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="unicode小技巧"/>
 <meta property="og:description" content="今天遇到一个问题 在mysql查询日志时，发现一些unicode字符串存储变成了 u7528u6237u53d6u6d88u8ba2u5355u8bf7u6c42 这个形式，手动加\虽然可行，但毕竟不是长久的办法 所以最好的办法是将字符串中的内容，根据unicode格式转换成unicode 代码如下: import re a = &#34;u7528u6237u53d6u6d88u8ba2u5355u8bf7u6c42&#34; pattern = re.compile(&#34;\u(.{4})&#34;) maps = pattern.findall(a) s = &#34;&#34; for i in maps: tmp = unichr(int(i, 16)) s += tmp print s 就会输出原先代表的文字意思了 注： 以上是代码是python2版本， python3需要把unichr改成chr"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/unicodexiao-ji-qiao.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/unicodexiao-ji-qiao.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-04-07 10:20:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Tips"/>
 <meta property="article:tag" content="python"/>
 <meta property="article:tag" content="unicode"/>
@@ -44,10 +44,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -69,7 +69,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -85,7 +85,7 @@
       
     <h1 id="unicodexiao-ji-qiao">unicode小技巧</h1>
     <p>
-          Posted on 周五 07 四月 2017 in <a href="http://qianpeili.github.io/category/tips.html">Tips</a>
+          Posted on 周五 07 四月 2017 in <a href="https://qianpeili.github.io/category/tips.html">Tips</a>
 
 
     </p>
@@ -119,8 +119,8 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://qianpeili.github.io/tag/python.html">python</a>
-      <a href="http://qianpeili.github.io/tag/unicode.html">unicode</a>
+      <a href="https://qianpeili.github.io/tag/python.html">python</a>
+      <a href="https://qianpeili.github.io/tag/unicode.html">unicode</a>
     </p>
   </div>
 
@@ -156,7 +156,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
