--- a/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html
+++ b/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="用mongodb统计去重后的数量"/>
 <meta property="og:description" content="假设有一个活动记录表，记录了玩家的参与信息，每个玩家有多条记录，格式如下 { _id: ObjectId(), uid: 1014, score: 10 } 要求统计参与活动的玩家中，分数大于等于10的人数。 var num = db.activity_log.aggregate([ {$match: {&#34;score&#34;: {&#34;$ge&#34;: 10}}}, # 筛选 {$group: {&#34;_id&#34;: null, &#34;users&#34;: {$addToSet: &#34;$uid&#34;}}}, # 将玩家ID放入一个集合，作去重 {&#34;$project&#34;: {&#34;_id&#34;: {&#34;$size&#34;: &#34;$users&#34;}}} # 求集合大小 ]); 得出结果{&#34;_id&#34;: 46}"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://qianpeili.github.io/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html"/>
+<meta property="og:url" content="https://qianpeili.github.io/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-03-16 18:11:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:author" content="https://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Tips"/>
 <meta property="article:tag" content="mongodb"/>
 <meta property="og:image" content="/images/profile.png">
@@ -43,10 +43,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://qianpeili.github.io">
+      <a href="https://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
+      <h1><a href="https://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
@@ -68,7 +68,7 @@
   <main>
 
     <nav>
-      <a href="http://qianpeili.github.io">    Home
+      <a href="https://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -84,7 +84,7 @@
       
     <h1 id="yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang">用mongodb统计去重后的数量</h1>
     <p>
-          Posted on 周四 16 三月 2017 in <a href="http://qianpeili.github.io/category/tips.html">Tips</a>
+          Posted on 周四 16 三月 2017 in <a href="https://qianpeili.github.io/category/tips.html">Tips</a>
 
 
     </p>
@@ -114,7 +114,7 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://qianpeili.github.io/tag/mongodb.html">mongodb</a>
+      <a href="https://qianpeili.github.io/tag/mongodb.html">mongodb</a>
     </p>
   </div>
 
@@ -150,7 +150,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " 爪了个子 ",
-  "url" : "http://qianpeili.github.io",
+  "url" : "https://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
