--- a/tags.html
+++ b/tags.html
@@ -80,11 +80,13 @@
   </header>
   <div>
     <ul class="list">          <li><a href="https://qianpeili.github.io/tag/bash.html">bash</a> (1)</li>
+          <li><a href="https://qianpeili.github.io/tag/gcc.html">gcc</a> (1)</li>
           <li><a href="https://qianpeili.github.io/tag/git.html">git</a> (3)</li>
           <li><a href="https://qianpeili.github.io/tag/go.html">go</a> (2)</li>
-          <li><a href="https://qianpeili.github.io/tag/linux.html">linux</a> (2)</li>
+          <li><a href="https://qianpeili.github.io/tag/linux.html">linux</a> (3)</li>
           <li><a href="https://qianpeili.github.io/tag/mongodb.html">mongodb</a> (1)</li>
           <li><a href="https://qianpeili.github.io/tag/nginx.html">nginx</a> (1)</li>
+          <li><a href="https://qianpeili.github.io/tag/node.html">node</a> (1)</li>
           <li><a href="https://qianpeili.github.io/tag/python.html">python</a> (2)</li>
           <li><a href="https://qianpeili.github.io/tag/tcp.html">tcp</a> (1)</li>
           <li><a href="https://qianpeili.github.io/tag/tcpdump.html">tcpdump</a> (1)</li>
